# totmannschalter

./: Cargo.toml  README.md  totmannschalter.service  totmannschalter.sublime-workspace
.github/workflows/: rust.yml
src/: config.rs  error.rs  main.rs  supervisor.rs
